--- a/kc-cloudtrust-testsuite/pom.xml
+++ b/kc-cloudtrust-testsuite/pom.xml
@@ -6,6 +6,7 @@
         <groupId>io.cloudtrust</groupId>
         <artifactId>kc-cloudtrust-module</artifactId>
         <version>26.0.0-SNAPSHOT</version>
+        <relativePath>../kc-cloudtrust-module</relativePath>
     </parent>
 
     <artifactId>kc-cloudtrust-testsuite</artifactId>
